# docebo_client

./: .gitignore  README.md  cpc_ilt_reminder.py  lms_roster.py  lms_roster.spec  lti_objects.py  pyproject.toml  send_classroom_reminder.py  setup.py  thisweek.py  thisweek.spec  transcript.py
docebo_client/: __init__.py  auth.py  centralrepo.py  client.py  courses.py  sessions.py  users.py
tests/: test_auth.py  test_course_sessions_by_date.py  test_courses.py  test_sessions_and_rosters.py
